# promptchaintesting

./: .env  .gitignore  README.md  app.py  pyproject.toml  start.sh  test_client.py
.github/workflows/: ci.yml
evals/: runner.py  scorers.py
evals/tasks/: author_design_doc.yaml  author_postmortem.yaml  author_release_notes.yaml  create_bug_report.yaml  cross_bug_summary_page.yaml  cross_issue_to_doc.yaml  cross_sprint_retro.yaml  cross_update_runbook.yaml  find_confluence_docs.yaml  summarize_bug_backlog.yaml  summarize_sprint.yaml  summarize_team_workload.yaml  triage_p1_bugs.yaml  triage_transition_done.yaml  triage_unassigned.yaml
legacy/: README.md  docker-compose.yml  requirements.txt
src/atlassian_agent/: __init__.py  agent.py  cli.py  tracing.py
src/atlassian_agent/llm/: __init__.py  anthropic_client.py  base.py  fake_client.py  ollama_client.py  openai_client.py
src/atlassian_agent/tools/: __init__.py  base.py  confluence_tool.py  jira_tool.py  mcp_bridge.py
tests/: conftest.py  test_agent_loop.py  test_evals_smoke.py  test_llm_clients.py  test_tools.py
workflows/: prompt_chain_demo.json
