[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlassian-agent"
version = "0.1.0"
description = "A tool-using LLM agent for Jira and Confluence, with an eval harness."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "atlassian-python-api>=3.41.0",
    "pydantic>=2.9.0",
    "click>=8.1.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.4.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
]
ui = ["streamlit>=1.40.0"]

[project.scripts]
atlassian-agent = "atlassian_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/atlassian_agent"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests", "evals"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
strict = true
python_version = "3.10"
mypy_path = "src"
packages = ["atlassian_agent"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["atlassian_python_api.*", "ollama.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
